# rootsmagic-importer

./: Cargo.toml  LICENSE  README.md
src/: main.rs  utils.rs
src/gui/: mod.rs
src/importers/: mod.rs  wikitree.rs
