[package]
name = "rootsmagic-importer"
version = "0.1.0"
authors = ["Scot Wilcox <scot@coreform.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.25.3", features = [ "bundled" ]}
fltk = "1.0.12"
reqwest = {version = "0.11.3", features = ["blocking", "json"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
chrono = {version = "0.4.19", features = ["serde"]}
thiserror = "1"
serde_urlencoded = "0.7.0"